[package]
name = "glommio-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.13.1"
glommio = "0.9.0"
futures-lite = { version = "2.5.0", features = ["default"] }
reinterpret = "0.2.1"
ringbuf = "0.4.7"
twoway = { version = "0.2.2", features = ["use_std"] }
kubernetes = "0.2.0"
tokio-core = "0.1.18"
futures = "0.3.31"
