[package]
name = "fix-kube-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-executor = "1.13.1"
glommio = "0.9.0"
futures-lite = { version = "2.5.0", features = ["default"] }
reinterpret = "0.2.1"
twoway = { version = "0.2.2", features = ["use_std"] }
tokio = { version = "1.42.0", features = ["net", "rt-multi-thread"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
futures = "0.3.31"

